# ctnet-hf

./: .gitignore  CITATION.cff  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  RELEASE_RESULTS.md  __init__.py  ctnet_estimator.py  model_card.py  refresh_release_bundles.py  run_moabb.py  summarize_release.py  train_all_sessions.py
docs/: ARCHITECTURE.md
examples/: export_architecture_only.py  export_checkpoint.py  export_hf_model.py  infer_random_input.py  train_minimal_dummy.py
hf_model/: README.md  config.json  configuration_ctnet.py  model.safetensors  modeling_ctnet.py  preprocessor_config.json  training_history.csv  training_metadata.json
hf_model_repo_template/: README.md  config.json  preprocessor_config.json
release/: README.md
release/results/: bnci2014_001_three_seed_results.csv  manifest.json  summary_by_seed.csv  summary_by_subject.csv  summary_overall.csv
scripts/: check_clean_inference  run  train_hf
src/ctnet_hf/: __init__.py  configuration_ctnet.py  inference.py  modeling_ctnet.py  preprocessing.py  release.py
tests/: conftest.py  test_benchmark_estimator.py  test_config.py  test_gradients.py  test_hf_model.py  test_model_shapes.py  test_preprocessing.py  test_release.py  test_save_load.py  test_train_all_sessions.py
