[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctnet-hf"
version = "0.1.0"
description = "Hugging Face-compatible CTNet architecture for EEG motor imagery classification"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Bogdan Kozyrskiy" }
]
keywords = ["eeg", "brain-computer-interface", "ctnet", "transformers", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "torch>=2.1,<3",
  "transformers>=4.39,<5",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "huggingface-hub>=0.23",
  "pytest>=7.4",
  "scikit-learn>=1.2",
  "twine>=5",
]
benchmark = [
  "moabb>=1.1",
  "pandas>=1.5",
  "scikit-learn>=1.2",
]

[project.urls]
Homepage = "https://github.com/bkozyrskiy/ctnet-hf"
Issues = "https://github.com/bkozyrskiy/ctnet-hf/issues"
Repository = "https://github.com/bkozyrskiy/ctnet-hf.git"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
